# Mnemosyne

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  OVERNIGHT_SUMMARY.md  README.md  SECURITY.md  STATUS.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: README.md  api-contract.agent.md  architecture-review.agent.md  database-migration.agent.md  design-consulting.agent.md  documentation-sync.agent.md  github-ops.agent.md  implementation.agent.md  observability.agent.md  orchestration.agent.md  refactor.agent.md  security.agent.md  static-analysis.agent.md  tech-pm.agent.md  testing.agent.md
.github/prompts/: execute-plan.prompt.md  plan-and-execute.prompt.md  plan-next-work.prompt.md  release-prep.prompt.md  review-milestone.prompt.md
.github/workflows/: ci.yml  release.yml
HomebrewFormula/: mnemosyne.rb
cli/: Cargo.toml
cli/src/: config_loader.rs  main.rs
cli/tests/: integration.rs
core/: Cargo.toml
core/benches/: dominator_bench.rs  graph_bench.rs  parser_bench.rs
core/src/: ai.rs  analysis.rs  config.rs  dominator.rs  errors.rs  fix.rs  gc_path.rs  graph.rs  heap.rs  hprof_parser.rs  lib.rs  llm.rs  mapper.rs  mcp.rs  object_graph.rs  report.rs  test_fixtures.rs
core/src/analysis/: ai.rs  classloader.rs  collection.rs  engine.rs  mod.rs  string_analysis.rs  thread.rs  top_instances.rs
core/src/fix/: generator.rs
core/src/graph/: dominator.rs  gc_path.rs  metrics.rs  mod.rs
core/src/hprof/: binary_parser.rs  mod.rs  object_graph.rs  parser.rs  tags.rs  test_fixtures.rs
core/src/mapper/: source.rs
core/src/mcp/: mod.rs  server.rs  session.rs
core/src/prompts/: mod.rs
core/src/prompts/defaults/: provider-insights.yaml
core/src/query/: executor.rs  mod.rs  parser.rs  types.rs
core/src/report/: renderer.rs
core/tests/: classloader_analysis.rs  query_executor.rs  query_parser.rs
docs/: QUICKSTART.md  agent-workflow.md  api.md  configuration.md  release-notes-v0.2.0.md  roadmap.md
docs/design/: M3-phase2-analysis.md  m3-p1-b2-core-analysis-features.md  memory-scaling.md  milestone-1-stability-and-trust.md  milestone-1.5-real-world-hardening.md  milestone-2-packaging-releases-dx.md  milestone-3-core-heap-analysis-parity.md  milestone-4-ui-and-usability.md  milestone-5-ai-mcp-differentiation.md  milestone-6-ecosystem-and-community.md
docs/examples/: .gitignore  README.md  cli-analysis-workflow.md  mcp-stdio-workflow.md
docs/performance/: memory-scaling.md
docs/superpowers/plans/: 2026-04-11-m3-phase3-classloader-oql.md  2026-04-12-ai-cli-chat.md  2026-04-12-ai-fix-generation.md  2026-04-12-ai-mcp-sessions.md  2026-04-12-ai-privacy-audit-logging.md  2026-04-12-ai-prompt-templates.md  2026-04-12-ai-provider-execution.md  2026-04-12-ai-task-runner.md  2026-04-12-m5-transport-hardening.md  2026-04-12-repo-governance-implementation.md  2026-04-12-step11-dense-synthetic-heaps.md  2026-04-13-m3-a-small-closeout.md  2026-04-13-m3-b-docker-cve-triage.md  2026-04-13-m3-final-closeout.md  2026-04-13-roadmap-closeout-doc-alignment.md  2026-04-14-m4-dashboard-first-slice.md  2026-04-14-m4-leak-workspace.md  2026-04-15-m4-artifact-explorer-breadth.md  2026-04-15-m4-competitive-explorer-5a.md  2026-04-15-m4-competitive-explorer-5b.md  2026-04-15-m4-context-activation.md  2026-04-15-m4-gc-path-workflow-hardening.md  2026-04-15-m4-real-local-detail-bridge.md
docs/superpowers/reviews/: 2026-04-15-project-review.md
docs/superpowers/specs/: 2026-04-12-ai-anthropic-transport-design.md  2026-04-12-ai-cli-chat-design.md  2026-04-12-ai-prompt-templates-design.md  2026-04-12-ai-provider-execution-design.md  2026-04-12-ai-task-runner-design.md  2026-04-12-m5-transport-hardening-design.md  2026-04-12-repo-governance-design.md  2026-04-12-step11-dense-synthetic-heaps-design.md  2026-04-13-m3-a-small-closeout-design.md  2026-04-13-m3-b-docker-cve-triage-design.md  2026-04-13-m3-final-closeout-design.md  2026-04-13-roadmap-closeout-design.md  2026-04-14-m4-dashboard-first-slice-design.md  2026-04-14-m4-leak-workspace-design.md  2026-04-15-m4-artifact-explorer-breadth-design.md  2026-04-15-m4-investigation-slices-design.md
resources/test-fixtures/: README.md
scripts/: generate_synthetic_heap.sh  measure_rss.sh  run_heaptrack_profile.sh  run_hyperfine_bench.sh  run_step11_scaling_validation.sh
scripts/java/: SyntheticHeapApp.java
scripts/tests/: test_generate_synthetic_heap.sh  test_generate_synthetic_heap_density.sh  test_generate_synthetic_heap_growth.sh  test_measure_rss_450mb.sh  test_measure_rss_short_parse.sh  test_run_heaptrack_profile.sh  test_run_hyperfine_bench.sh  test_run_step11_scaling_validation.sh
ui/: index.html  package.json  run-tests.ts  tsconfig.app.json
ui/src/app/: App.test.tsx  App.tsx  globals.css  providers.tsx  router.tsx
ui/src/features/artifact-explorer/: ArtifactExplorerPage.test.tsx  ArtifactExplorerPage.tsx
ui/src/features/artifact-loader/: ArtifactDropzone.tsx  ArtifactLoaderPage.test.tsx  ArtifactLoaderPage.tsx  load-analysis-artifact.test.ts  load-analysis-artifact.ts  use-artifact-store.ts
ui/src/features/dashboard/: DashboardPage.test.tsx  DashboardPage.tsx  dashboard-store.ts
ui/src/features/heap-explorer/: HeapDominatorPage.test.tsx  HeapDominatorPage.tsx  HeapExplorerLayout.test.tsx  HeapExplorerLayout.tsx  HeapObjectInspectorPage.test.tsx  HeapObjectInspectorPage.tsx  HeapQueryConsolePage.test.tsx  HeapQueryConsolePage.tsx  heap-explorer-query-client.test.ts  heap-explorer-query-client.ts
ui/src/features/leak-workspace/: LeakExplainPage.test.tsx  LeakExplainPage.tsx  LeakFixPage.test.tsx  LeakFixPage.tsx  LeakGcPathPage.test.tsx  LeakGcPathPage.tsx  LeakSourceMapPage.test.tsx  (+9 more)
ui/src/lib/: analysis-types.test.ts  analysis-types.ts
ui/src/test/: install-dom.ts  jsdom.d.ts  setup.ts
(+19 files in other folders)
