[package]
name = "mnemosyne-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
mnemosyne-core = { path = "../core" }
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
serde_json.workspace = true
serde.workspace = true
dirs.workspace = true
toml.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile.workspace = true
mnemosyne-core = { path = "../core", features = ["test-fixtures"] }
