[package]
name = "mnemosyne-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
comfy-table = "7.1"
console.workspace = true
indicatif.workspace = true
mnemosyne-core = { path = "../core", version = "0.1.0" }
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
serde_json.workspace = true
serde.workspace = true
dirs.workspace = true
toml.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile.workspace = true
mnemosyne-core = { path = "../core", version = "0.1.0", features = ["test-fixtures"] }
