[package]
name = "mnemosyne-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
test-fixtures = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
anyhow.workspace = true
byteorder.workspace = true
petgraph.workspace = true

[dev-dependencies]
tempfile.workspace = true
